Added footer with app version

--- a/imprimir.htm
+++ b/imprimir.htm
@@ -19,5 +19,8 @@
         <input type="submit" name="acceptar" value="Acceptar">
     </p>
 </form>
+<div style="margin-top: 25px; float: right">
+    v0.1
+</div>
 </body>
 </html>
