--- a/index.htm
+++ b/index.htm
@@ -19,5 +19,8 @@
         <a href="imprimir.htm">Imprimir</a></font>
     </p>
 </div>
+<div style="margin-top: 25px; float: right">
+    v0.1
+</div>
 </body>
 </html>
