--- a/insertar.htm
+++ b/insertar.htm
@@ -182,25 +182,19 @@
             <br>
 
             <INPUT TYPE=RADIO NAME="cobrada" VALUE="0" CHECKED>&nbsp;No&nbsp;
-
             <INPUT TYPE=RADIO NAME="cobrada" VALUE="1">&nbsp;Sí<BR>
-
             <br>
-
             Observacions:<br>
-
             <textarea name="observacions" cols="50" rows="5"></textarea>
-
         </font>
-
         <br><br>
-
         <input type="button" alt="Insertar" value="Insertar"
                onclick="if (validar_formulari(document.getElementById('form_1'))) document.getElementById('form_1').submit();">
 
 </form>
-
+<div style="margin-top: 25px; float: right">
+    v0.1
+</div>
 </body>
-
 </html>
 
