Added footer with app version

--- a/imprimir.htm
+++ b/imprimir.htm
@@ -7,17 +7,29 @@
 </head>
 
 <body>
-<p align=center><font size="3" face="Verdana, Arial, Helvetica, sans-serif"><strong>Imprimir factures
-    (FACTURINI)</strong></font></p>
-<p><strong><font size="2" face="Verdana, Arial, Helvetica, sans-serif"><a href="index.htm">Anar
-    a la plana inicial</a></font></strong></p>
+<p align=center>
+    <font size="3" face="Verdana, Arial, Helvetica, sans-serif">
+        <strong>Imprimir factures (FACTURINI)</strong>
+    </font>
+</p>
+<p>
+    <strong>
+        <font size="2" face="Verdana, Arial, Helvetica, sans-serif">
+            <a href="index.htm">Anar a la plana inicial</a>
+        </font>
+    </strong>
+</p>
 <form action="imprimir.php" method="post" name="form_3" target="_blank">
-    <p><font size="2" face="Verdana, Arial, Helvetica, sans-serif">Número de registre:&nbsp;</font>
+    <p>
+        <font size="2" face="Verdana, Arial, Helvetica, sans-serif">Número de registre:&nbsp;</font>
         <input name="num_reg" type="text" size="11" maxlength="11">
         <br>
         <br>
         <input type="submit" name="acceptar" value="Acceptar">
     </p>
 </form>
+<div style="margin-top: 25px; float: right">
+    v0.1
+</div>
 </body>
 </html>
