--- a/index.htm
+++ b/index.htm
@@ -4,20 +4,28 @@
     <title>FACTURINI</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 </head>
-
 <body>
 <div align="center">
-    <p><font size="4" face="Verdana, Arial, Helvetica, sans-serif"><strong>SOL·LICITUD
-        FACTURA -<font color="#CC0066">FACTURINI</font>-</strong></font></p>
-    <p>&nbsp;</p>
+    <p>
+        <font size="4" face="Verdana, Arial, Helvetica, sans-serif">
+            <strong>SOL·LICITUD FACTURA -<font color="#CC0066">FACTURINI</font>-</strong>
+        </font>
+    </p>
+    <p>&nbsp</p>
 </div>
 <div align="center">
-    <p><font size="3" face="Verdana, Arial, Helvetica, sans-serif"><a href="insertar.htm">Insertar</a><br>
-        <br>
-        <a href="consultar.php">Consultar</a><br><br>
-        <a href="llistar.php">Llistar</a><br><br>
-        <a href="imprimir.htm">Imprimir</a></font>
+    <p>
+        <font size="3" face="Verdana, Arial, Helvetica, sans-serif"><a href="insertar.htm">Insertar</a>
+            <br>
+            <br>
+            <a href="consultar.php">Consultar</a><br><br>
+            <a href="llistar.php">Llistar</a><br><br>
+            <a href="imprimir.htm">Imprimir</a>
+        </font>
     </p>
+</div>
+<div style="margin-top: 25px; float: right">
+    v0.1
 </div>
 </body>
 </html>
