#7 - First behat tests

--- a/insertar.htm
+++ b/insertar.htm
@@ -98,8 +98,7 @@
         </font>
         <br>
         <br>
-        <input type="button" alt="Insertar" value="Insertar"
-               onclick="if (validar_formulari(document.getElementById('form_1'))) document.getElementById('form_1').submit();">
+        <input type="submit" alt="Insertar" value="Insertar"/>
     </font>
 </form>
 <div style="margin-top: 25px; float: right">
